<resources>
    <string name="app_name">Financial Management</string>
    <string name="titulo_dashboard">Report of the last 7 days</string>
    <string name="titulo_receitas">Revenues</string>
    <string name="titulo_despesas">Expenses</string>
    <string name="titulo_total">Total</string>
    <string name="texto_fab_adicionar_lancamento">Register Revenue/Expense</string>
    <string name="texto_fab_relatorio">Report</string>
    <string name="texto_email">Email</string>
    <string name="texto_senha">Password</string>
    <string name="txtHintEmail">Type your e-mail</string>
    <string name="txtHintSenha">Type your password</string>
    <string name="texto_bt_entrar">Enter</string>
    <string name="texto_bt_cadastrar">Sign in</string>
    <string name="email_password_empty_warning">Email and password can\'t be empty!</string>
    <string name="password_min_length_warning">Password must have at least 6 characters!</string>
    <string name="login_error_message">Error on login. Check the user and password.</string>
    <string name="signup_error_message">Error in signup. Check the informed data.</string>
    <string name="texto_fab_perfil">My Profile</string>
    <string name="texto_fab_sair">Logout</string>
    <string name="txtCadastro">My Profile</string>
    <string name="txtNome">Name</string>
    <string name="etNome">Enter your name here...</string>
    <string name="txtEmail">Email</string>
    <string name="etEmail">Enter your email here...</string>
    <string name="btnSalvar">Save</string>
    <string name="cadastro_incompleto_dialog_title">Incomplete Registration</string>
    <string name="cadastro_incompleto_dialog_message">Your registration is incomplete, you must fill in your Name before starting to use the app. When you click OK you will
        be redirected to the Profile screen to register a valid Name.</string>
    <string name="txtRelatorio">Report</string>
    <string name="titulo_datainicial_relatorio">From</string>
    <string name="titulo_datafinal_relatorio">To</string>
    <string name="titulo_botao_relatorio">Generate Report</string>
    <string name="datas_invalidas_relatorios">From or To Date are invalid! Check the informed dates and try again.</string>
    <string name="datas_invalidas_titulo">Invalid Dates</string>
    <string name="lancar_receita_despesa_titulo">Register Revenue/Expense</string>
    <string name="btn_lancar">Register</string>
    <string name="tipo_lancamento">Type</string>
    <string name="descricao_lancamento_hint">Monthly wage</string>
    <string name="erro_descricao_lancamento">Description not informed or invalid!</string>
    <string name="erro_tipo_lancamento">Type not informed or invalid!</string>
    <string name="erro_valor_lancamento_vazio">Value not informed or invalid!</string>
    <string name="erro_valor_negativo_ou_zero">Value cannot be zero or negative!</string>
    <string name="erro_data_invalida_lancamento">Date not informed or invalid!</string>
    <string name="lancamento_efetuado_sucesso">Registered with success!</string>
    <string name="lancamento_erro">Error:</string>
    <string name="relatorio_date_title">Date:</string>
    <string name="relatorio_desc_title">Desc:</string>
    <string name="etNome_vazio">Name cannot be empty!</string>
    <string name="usuarioAtualizado">User updated successfully!</string>
    <string name="seja_bem_vindo_titulo">Welcome, </string>
    <string name="alerta_excluir_mensagem">Confirm delete of</string>
    <string name="alerta_excluir_titulo">Delete</string>
    <string name="alerta_excluir_botao_cancelar">Cancel</string>
    <string name="alerta_excluir_botao_sim">Yes</string>
    <string name="mensagem_sem_lancamentos_no_periodo">No records has been found with the informed filters.</string>
    <string name="datas_vazias_relatorio">Please fill the From and To Date to generate the report!</string>
    <string name="datas_vazias_relatorio_titulo">Dates not informed</string>
    <string name="etConta">Enter your account number here...</string>
    <string name="butSalvar">Save</string>
    <string name="txtBanco">Bank Name</string>
    <string name="edNomeBanco">Enter the bank name here..</string>
    <string name="txtConta">Bank Account</string>
    <string name="txtNumConta">Account Number</string>
    <string name="txtSaldoInicial">Starting Balance</string>
    <string name="txtLista">Account List</string>
    <string name="descricao_lancamento">Description</string>
    <string name="valor_lancamento">Value</string>
    <string name="valor_lancamento_hint">1000</string>
    <string name="data_lancamento">Date</string>
    <string name="data_inicio_relatorio_hint">01/10/2021</string>
    <string name="data_fim_relatorio_hint">31/10/2021</string>
    <string name="btn_lista_contas_usuario">My Bank Accounts</string>
    <string name="erro_nome_banco_vazio">Bank name cannot be empty.</string>
    <string name="erro_numero_conta_vazio">Account number cannot be empty.</string>
    <string name="erro_saldo_inicial_vazio">Starting balance cannot be empty.</string>
    <string name="erro_numero_conta_invalido">Account Number cannot be zero.</string>
    <string name="erro_saldo_inicial_invalido">Starting balance cannot be zero.</string>
    <string name="conta_bancaria_cadastrada_sucesso">Bank Account created with success!</string>
    <string name="conta_bancaria_atualizada_sucesso">Bank Account updated with success!</string>
    <string name="erro_conta_bancaria_invalida_lancamento">Bank Account not informed or invalid!</string>
    <string name="conta_bancaria_lancamento">Bank Account</string>
    <string name="cadastro_incompleto_conta_bancaria_dialog_message">You don\'t have any Bank Accounts registered in the app. Access My Profile to add a new Bank Account.</string>
</resources>