<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFDFD"
    tools:context=".LancamentoActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_receita_despesa" />

        <TextView
            android:id="@+id/txtAdicionarLancamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/lancar_receita_despesa_titulo"
            android:textAlignment="center"
            android:textSize="@dimen/title_activity"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/input_caption_margin_bottom"
            android:text="@string/descricao_lancamento"
            android:textSize="@dimen/caption_inputs"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtDescricaoLancamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/descricao_lancamento_hint"
            android:inputType="textCapWords"
            android:textSize="@dimen/inputs_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/tipo_lancamento"
            android:textSize="@dimen/caption_inputs"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:clickable="true">

            <RadioButton
                android:id="@+id/rdbReceita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/titulo_receitas" />

            <RadioButton
                android:id="@+id/rdbDespesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_despesas" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/input_caption_margin_bottom"
            android:text="@string/valor_lancamento"
            android:textSize="@dimen/caption_inputs"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/valor_lancamento_hint"
            android:inputType="numberDecimal"
            android:textSize="@dimen/inputs_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/input_caption_margin_bottom"
            android:text="@string/data_lancamento"
            android:textSize="@dimen/caption_inputs"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="01/10/2021"
            android:inputType="date"
            android:textSize="@dimen/inputs_text" />

        <DatePicker
            android:id="@+id/dtpData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:datePickerMode="calendar"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnLancar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_lancar"
            android:textSize="@dimen/buttons_font_size" />
    </LinearLayout>
</ScrollView>


