<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFDFD"
    tools:context=".TelaCadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/txtCadastro"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="85dp" />


        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/txtNome"
            android:textColor="#3F51B5"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/etNome"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/txtEmail"
            android:textColor="#3F51B5"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/etEmail"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="20dp"
            android:enabled="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#3F51B5"
            android:text="@string/btnSalvar" />


    </LinearLayout>


</ScrollView>