<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFDFD"
    tools:context=".TelaInicial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/txtCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textSize="@dimen/title_activity"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo_financas" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/input_caption_margin_bottom"
            android:text="@string/texto_email"
            android:textAlignment="center"
            android:textSize="@dimen/caption_inputs"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/txtHintEmail"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/inputs_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/input_caption_margin_bottom"
            android:text="@string/texto_senha"
            android:textAlignment="center"
            android:textSize="@dimen/caption_inputs"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/txtHintSenha"
            android:inputType="textPassword"
            android:textSize="@dimen/inputs_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/texto_bt_entrar"
            android:textSize="@dimen/buttons_font_size" />

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/texto_bt_cadastrar"
            android:textSize="@dimen/buttons_font_size" />
    </LinearLayout>
</ScrollView>