<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btSalvar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFDFD"
    tools:context=".TelaConta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_banco" />

        <TextView
            android:id="@+id/txtConta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/txtConta"
            android:textColor="#3F51B5"
            android:textSize="30dp"
            android:textStyle="bold"></TextView>


        <TextView
            android:id="@+id/txtBanco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:text="@string/txtBanco"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/edNomeBanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/edNomeBanco"
            android:textAlignment="center"
            android:textStyle="bold">

        </EditText>

        <TextView
            android:id="@+id/txtNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/txtNumConta"
            android:textColor="#3F51B5"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/etConta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:hint="@string/etConta"
            android:textAlignment="center"
            android:textSize="15dp"
            android:textStyle="bold"></EditText>

        <TextView
            android:id="@+id/txtSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/txtSaldoInicial"
            android:textColor="#3F51B5"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/etSaldoInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:textColor="#3F51B5"
            android:textSize="15dp"
            android:textStyle="bold"></EditText>

        <Button
            android:id="@+id/butSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#3F51B5"
            android:text="@string/butSalvar" />


    </LinearLayout>
</ScrollView>
