<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFDFD"
    tools:context=".RelatorioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_relatorio" />

        <TextView
            android:id="@+id/txtRelatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/txtRelatorio"
            android:textAlignment="center"
            android:textSize="@dimen/title_activity"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="85dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTituloDataInicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:width="120dp"
                android:gravity="center_horizontal"
                android:text="@string/titulo_datainicial_relatorio"
                android:textSize="@dimen/caption_inputs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtDataInicial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_caption_margin_bottom"
                android:width="120dp"
                android:hint="@string/data_inicio_relatorio_hint"
                android:inputType="date"
                android:maxLength="10"
                android:textAlignment="center"
                android:textSize="@dimen/inputs_text"
                app:layout_constraintEnd_toEndOf="@+id/lblTituloDataInicial"
                app:layout_constraintStart_toStartOf="@+id/lblTituloDataInicial"
                app:layout_constraintTop_toBottomOf="@+id/lblTituloDataInicial" />

            <TextView
                android:id="@+id/lblTituloDataFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:width="120dp"
                android:gravity="center_horizontal"
                android:text="@string/titulo_datafinal_relatorio"
                android:textSize="@dimen/caption_inputs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txtDataFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_caption_margin_bottom"
                android:width="120dp"
                android:hint="@string/data_fim_relatorio_hint"
                android:inputType="date"
                android:maxLength="10"
                android:textAlignment="center"
                android:textSize="@dimen/inputs_text"
                app:layout_constraintEnd_toEndOf="@+id/lblTituloDataFinal"
                app:layout_constraintStart_toStartOf="@+id/lblTituloDataFinal"
                app:layout_constraintTop_toBottomOf="@+id/lblTituloDataFinal" />

            <Button
                android:id="@+id/btnGerarRelatorio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/titulo_botao_relatorio"
                android:textSize="@dimen/buttons_font_size"
                app:layout_constraintEnd_toEndOf="@+id/txtDataFinal"
                app:layout_constraintStart_toStartOf="@+id/txtDataInicial"
                app:layout_constraintTop_toBottomOf="@+id/txtDataFinal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <DatePicker
            android:id="@+id/dtpDataInicial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:datePickerMode="calendar"
            android:visibility="gone" />

        <DatePicker
            android:id="@+id/dtpDataFinal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:datePickerMode="calendar"
            android:visibility="gone" />

        <ListView
            android:id="@+id/lvwLancamentos"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</ScrollView>

