<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FCFDFD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/titulo_dashboard"
        android:textSize="25sp"
        android:textColor="#3F51B5"
        android:textAlignment="center"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTituloReceitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/titulo_receitas"
            android:textColor="#3F51B5"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtValorReceitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="R$ 1000,00"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/lblTituloReceitas"
            app:layout_constraintStart_toStartOf="@+id/lblTituloReceitas"
            app:layout_constraintTop_toBottomOf="@+id/lblTituloReceitas" />

        <TextView
            android:id="@+id/lblTituloDespesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/titulo_despesas"
            android:textColor="#3F51B5"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtValorDespesas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="R$ 1000,00"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/lblTituloDespesas"
            app:layout_constraintStart_toStartOf="@+id/lblTituloDespesas"
            app:layout_constraintTop_toBottomOf="@+id/lblTituloDespesas" />

        <TextView
            android:id="@+id/lblTituloTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/titulo_total"
            android:textColor="#3F51B5"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/txtValorDespesas"
            app:layout_constraintStart_toStartOf="@+id/txtValorReceitas"
            app:layout_constraintTop_toBottomOf="@+id/txtValorDespesas" />

        <TextView
            android:id="@+id/txtValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="R$ 1000,00"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/lblTituloTotal"
            app:layout_constraintStart_toStartOf="@+id/lblTituloTotal"
            app:layout_constraintTop_toBottomOf="@+id/lblTituloTotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
